# spasmlang

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: checks.yml  release.yml  tests.yml
spasm/: __init__.py  __main__.py  asm.py
tests/: __init__.py  test_asm.py  test_spasm.py
