[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spasmlang"
dynamic = ["version"]
description = 'Simple Python Assembly Language'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["python", "assembly", "development"]
authors = [{ name = "Gabriele N. Tornetta", email = "phoenix1987@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["bytecode"]

[project.urls]
Documentation = "https://github.com/P403n1x87/spasmlang#readme"
Issues = "https://github.com/P403n1x87/spasmlang/issues"
Source = "https://github.com/P403n1x87/spasmlang"

[project.scripts]
spasm = "spasm.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "spasm/_version.py"

[tool.hatch.envs.tests]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.tests.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.tests.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive spasm {args}"
style = [
  "ruff spasm/ tests/ {args}",
  "black --check --diff spasm/ tests/ {args}",
]
fmt = ["black spasm/ tests/ {args}", "ruff --fix spasm/ tests/ {args}", "style"]
all = ["style", "typing"]

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["spasm"]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["spasm"]
force-single-line = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["spasm", "tests"]
branch = true
parallel = true
omit = ["spasm/_version.py"]

[tool.coverage.paths]
spasmlang = ["spasm"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
